Fixed dropdown suggestions alignments and sizes

--- a/src/styles/DataPage.css
+++ b/src/styles/DataPage.css
@@ -2,12 +2,20 @@ body {
     background-color: #111113;
 }
 
+.main-search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .main-search-form {
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
     margin: 40px 0px -100px 0px;
-  }
+    width: 30%;
+}
   
 #main-search-input {
   height: 3.0rem;
@@ -17,8 +25,8 @@ body {
   border: 2px solid white; 
   border-radius: 0px;
   font-size: 1rem;
-  width: 50%;
   padding: 0 3.0rem 0 1rem;
+  width: 100%;
 }
 
 #main-search-input::placeholder {
