--- a/src/styles/SearchSuggestions.css
+++ b/src/styles/SearchSuggestions.css
@@ -1,11 +1,9 @@
 .suggestion-explore {
-    cursor: pointer;
     position: absolute;
-    left: 50%;
-    top: 49.4%;
-    width: 30%;
+    width: 100%;
+    top: 100%;
+    z-index: 10;
     background-color: #111113;
-    transform: translate(-50%, -50%);
     .suggestion:hover {
         background-color: #541A8C;
     }
@@ -13,21 +11,19 @@
     .suggestion {
         color: white;
         text-align: center;
-        z-index: 1;
         width: 100%;
         background-color: #111113;
         border: 2px solid white;
+        cursor: pointer;
     }
 }
 
 .suggestion-navbar {
-    cursor: pointer;
     position: absolute;
-    left: 50%;
-    top: 432%;
-    width: 24%;
+    width: 100%;
+    top: 100%;
+    z-index: 10;
     background-color: #111113;
-    transform: translate(-50%, -50%);
     font: 0.8rem 'Roboto', sans-serif;
     .suggestion:hover {
         background-color: #541A8C;
@@ -35,9 +31,9 @@
     .suggestion {
         color: white;
         text-align: center;
-        z-index: 1;
         width: 100%;
         background-color: #111113;
         border: 2px solid white;
+        cursor: pointer;
     }
 }
